model, lib, pkg, examples: Rename MinIO references to generic S3
