# pkg/api/rest/docs/swagger.json
@@ -471,7 +471,7 @@
         },
         "/velero/migration/precheck": {
             "post": {
-                "description": "Check source cluster, target cluster, and MinIO before executing Velero migration.",
+                "description": "Check source cluster, target cluster, and the S3 object store before executing Velero migration.",
                 "consumes": [
                     "application/json"
                 ],
@@ -1090,7 +1090,7 @@
         },
         "/velero/{role}/install": {
             "post": {
-                "description": "Install or upgrade Velero on source or target cluster using MinIO.",
+                "description": "Install or upgrade Velero on source or target cluster using an S3-compatible object store.",
                 "consumes": [
                     "application/json"
                 ],
@@ -1241,7 +1241,21 @@
                 }
             }
         },
-        "github_com_cloud-barista_cm-grasshopper_pkg_api_rest_model_common.MinIOAccess": {
+        "github_com_cloud-barista_cm-grasshopper_pkg_api_rest_model_common.MultiClusterEnvelope": {
+            "type": "object",
+            "properties": {
+                "sourceCluster": {
+                    "$ref": "#/definitions/github_com_cloud-barista_cm-grasshopper_pkg_api_rest_model_common.ClusterAccess"
+                },
+                "storage": {
+                    "$ref": "#/definitions/github_com_cloud-barista_cm-grasshopper_pkg_api_rest_model_common.StorageAccess"
+                },
+                "targetCluster": {
+                    "$ref": "#/definitions/github_com_cloud-barista_cm-grasshopper_pkg_api_rest_model_common.ClusterAccess"
+                }
+            }
+        },
+        "github_com_cloud-barista_cm-grasshopper_pkg_api_rest_model_common.S3Access": {
             "type": "object",
             "properties": {
                 "accessKey": {
@@ -1261,25 +1275,11 @@
                 }
             }
         },
-        "github_com_cloud-barista_cm-grasshopper_pkg_api_rest_model_common.MultiClusterEnvelope": {
-            "type": "object",
-            "properties": {
-                "sourceCluster": {
-                    "$ref": "#/definitions/github_com_cloud-barista_cm-grasshopper_pkg_api_rest_model_common.ClusterAccess"
-                },
-                "storage": {
-                    "$ref": "#/definitions/github_com_cloud-barista_cm-grasshopper_pkg_api_rest_model_common.StorageAccess"
-                },
-                "targetCluster": {
-                    "$ref": "#/definitions/github_com_cloud-barista_cm-grasshopper_pkg_api_rest_model_common.ClusterAccess"
-                }
-            }
-        },
         "github_com_cloud-barista_cm-grasshopper_pkg_api_rest_model_common.StorageAccess": {
             "type": "object",
             "properties": {
-                "minio": {
-                    "$ref": "#/definitions/github_com_cloud-barista_cm-grasshopper_pkg_api_rest_model_common.MinIOAccess"
+                "s3": {
+                    "$ref": "#/definitions/github_com_cloud-barista_cm-grasshopper_pkg_api_rest_model_common.S3Access"
                 }
             }
         },
@@ -2781,10 +2781,6 @@
                 "SoftwarePackageTypeDEB": "Debian based package type",
                 "SoftwarePackageTypeRPM": "RHEL based package type"
             },
-            "x-enum-descriptions": [
-                "Debian based package type",
-                "RHEL based package type"
-            ],
             "x-enum-varnames": [
                 "SoftwarePackageTypeDEB",
                 "SoftwarePackageTypeRPM"
